# vitatube

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
chex quest 2-20260716T210256Z-1-001/chex quest 2/: CMakeLists.txt  README.md  deh_loader.c  deh_loader.h  doomgeneric_vita.c  sanitize_pngs.sh
chex quest 2-20260716T210256Z-1-001/chex quest 2/.github/workflows/: build.yml
chex quest 2-20260716T210256Z-1-001/chex quest 2/sce_sys/livearea/contents/: template.xml
chex quest 2-20260716T210256Z-1-001/chex quest 2/scripts/: gen_assets.py  patch_dehacked.py  patch_sprite_override.py  patch_sprite_range.py
sce_sys/livearea/contents/: template.xml
source/: app.c  app.h  chapters.c  chapters.h  extractor.c  extractor.h  http.c  http.h  log.c  log.h  main.c  player.c  player.h  sponsorblock.c  sponsorblock.h  storage.c  storage.h  stream_select.c  stream_select.h  subtitles.c  subtitles.h  ui.c  ui.h  youtube.c  youtube.h
